library/autodiff/tests/ui/no_function_name.rs
use autodiff::autodiff;

#[autodiff]
fn sin(x: f32) -> f32;

fn main() {}
